--- a/index.html
+++ b/index.html
@@ -6,25 +6,13 @@
     <title>Budget Cooking for Expats in Sweden</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap" rel="stylesheet">
-
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-PDR9J43J');</script>
-<!-- End Google Tag Manager -->
-
 </head>
 <body>
     <div class="loading" id="loading">
         <div class="packman">🍽️</div>
         <p>Loading delicious recipes...</p>
     </div>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PDR9J43J"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+
     <header>
         <nav>
             <div class="logo">
@@ -132,7 +120,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h3>Popular Swedish Budget Recipes</h3>
                 <div class="recipe-preview-grid">
                     <div class="recipe-card">
-                        <img src="images/grilled-cheese.jpg" alt="Swedish Grilled Cheese">
+                        <img src="grilled-cheese.jpg" alt="Swedish Grilled Cheese">
                         <div class="recipe-info">
                             <h4>Swedish Grilled Cheese</h4>
                             <p>Cost: ~15 kr per serving</p>
@@ -141,16 +129,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     
                     <div class="recipe-card">
-                        <img src="images/pannkakor.jpg" alt="Swedish Pancakes">
+                        <div class="recipe-image-container">
+                            <img src="pannkakor.jpg" alt="Swedish Pancakes">
+                            <div class="certification-badge">
+                                <img src="halal-stamp.png" alt="Halal Certified" class="cert-badge">
+                            </div>
+                        </div>
                         <div class="recipe-info">
                             <h4>Pannkakor (Swedish Pancakes)</h4>
-                            <p>Cost: ~8 kr per serving</p>
+                            <p>Cost: ~8 kr per serving - Can be made Halal!</p>
                             <a href="recipe-pannkakor.html" class="recipe-link">View Recipe</a>
                         </div>
                     </div>
                     
                     <div class="recipe-card">
-                        <img src="images/kottbullar.jpg" alt="Swedish Meatballs">
+                        <img src="kottbullar.jpg" alt="Swedish Meatballs">
                         <div class="recipe-info">
                             <h4>Budget Köttbullar</h4>
                             <p>Cost: ~22 kr per serving</p>
