--- a/recipe-artsoppa.html
+++ b/recipe-artsoppa.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="images/artsoppa-detail.jpg" alt="Ärtsoppa" class="recipe-image">
+                    <img src="artsoppa-detail.jpg" alt="Ärtsoppa" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Ärtsoppa (Swedish Pea Soup)</h1>
