--- a/recipe-grilled-cheese.html
+++ b/recipe-grilled-cheese.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="images/grilled-cheese-detail.jpg" alt="Swedish Grilled Cheese" class="recipe-image">
+                    <img src="grilled-cheese-detail.jpg" alt="Swedish Grilled Cheese" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Swedish Grilled Cheese (Grillad Ost Smörgås)</h1>
