--- a/recipe-hasselback.html
+++ b/recipe-hasselback.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="images/hasselback-detail.jpg" alt="Hasselbackspotatis" class="recipe-image">
+                    <img src="hasselback-detail.jpg" alt="Hasselbackspotatis" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Hasselbackspotatis (Swedish Sliced Baked Potatoes)</h1>
