--- a/recipe-pannkakor.html
+++ b/recipe-pannkakor.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="images/pannkakor-detail.jpg" alt="Pannkakor" class="recipe-image">
+                    <img src="pannkakor-detail.jpg" alt="Pannkakor" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Pannkakor (Swedish Pancakes)</h1>
@@ -117,6 +117,22 @@
                             <li><strong>Eggs:</strong> Coop or ICA - often 3 for 2 deals</li>
                             <li><strong>Lingonberry jam:</strong> Felix or ICA brand, Lidl has good prices</li>
                         </ul>
+                    </div>
+
+                    <div class="allergy-info">
+                        <h3>🕌 Halal-Friendly Version</h3>
+                        <div class="allergy-grid">
+                            <div class="allergy-option">
+                                <h4>Make it Halal</h4>
+                                <ul>
+                                    <li><strong>Milk:</strong> Use Oatly oat milk or any plant-based milk</li>
+                                    <li><strong>Butter:</strong> Use Flora plant butter or coconut oil</li>
+                                    <li><strong>Where:</strong> All major Swedish stores carry these</li>
+                                    <li><strong>Cost:</strong> ~10 kr per serving (2 kr extra)</li>
+                                </ul>
+                                <p><strong>Result:</strong> Delicious vegan pannkakor that are naturally halal and just as traditional!</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
