--- a/recipes.html
+++ b/recipes.html
@@ -51,7 +51,7 @@
             <div class="container">
                 <div class="recipe-grid">
                     <div class="recipe-card">
-                        <img src="images/grilled-cheese.jpg" alt="Swedish Grilled Cheese">
+                        <img src="grilled-cheese.jpg" alt="Swedish Grilled Cheese">
                         <div class="recipe-info">
                             <h3>Swedish Grilled Cheese</h3>
                             <p class="cost">~15 kr per serving</p>
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/pannkakor.jpg" alt="Swedish Pannkakor">
+                        <img src="pannkakor.jpg" alt="Swedish Pannkakor">
                         <div class="recipe-info">
                             <h3>Pannkakor</h3>
                             <p class="cost">~8 kr per serving</p>
@@ -81,7 +81,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/fisk-gratang.jpg" alt="Fish Gratin">
+                        <img src="fisk-gratang.jpg" alt="Fish Gratin">
                         <div class="recipe-info">
                             <h3>Budget Fisk Gratäng</h3>
                             <p class="cost">~28 kr per serving</p>
@@ -101,7 +101,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/artsoppa.jpg" alt="Ärtsoppa - Pea Soup">
+                        <img src="artsoppa.jpg" alt="Ärtsoppa - Pea Soup">
                         <div class="recipe-info">
                             <h3>Ärtsoppa</h3>
                             <p class="cost">~12 kr per serving</p>
@@ -111,7 +111,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/kalops.jpg" alt="Swedish Kalops">
+                        <img src="kalops.jpg" alt="Swedish Kalops">
                         <div class="recipe-info">
                             <h3>Budget Kalops</h3>
                             <p class="cost">~25 kr per serving</p>
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/stromming.jpg" alt="Stekt Strömming">
+                        <img src="stromming.jpg" alt="Stekt Strömming">
                         <div class="recipe-info">
                             <h3>Stekt Strömming</h3>
                             <p class="cost">~14 kr per serving</p>
@@ -131,7 +131,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/kroppkakor.jpg" alt="Kroppkakor">
+                        <img src="kroppkakor.jpg" alt="Kroppkakor">
                         <div class="recipe-info">
                             <h3>Kroppkakor</h3>
                             <p class="cost">~16 kr per serving</p>
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/inlagd-sill.jpg" alt="Inlagd Sill">
+                        <img src="inlagd-sill.jpg" alt="Inlagd Sill">
                         <div class="recipe-info">
                             <h3>Inlagd Sill</h3>
                             <p class="cost">~9 kr per serving</p>
@@ -151,7 +151,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/hasselback.jpg" alt="Hasselbackspotatis">
+                        <img src="hasselback.jpg" alt="Hasselbackspotatis">
                         <div class="recipe-info">
                             <h3>Hasselbackspotatis</h3>
                             <p class="cost">~11 kr per serving</p>
@@ -161,7 +161,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/blodpudding.jpg" alt="Blodpudding">
+                        <img src="blodpudding.jpg" alt="Blodpudding">
                         <div class="recipe-info">
                             <h3>Blodpudding</h3>
                             <p class="cost">~13 kr per serving</p>
