--- a/recipe-kottbullar.html
+++ b/recipe-kottbullar.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="images/kottbullar-detail.jpg" alt="Budget Köttbullar" class="recipe-image">
+                    <img src="kottbullar-detail.jpg" alt="Budget Köttbullar" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Budget Köttbullar (Swedish Meatballs)</h1>
