--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Budget Cooking for Expats in Sweden</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7J62S18CR0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7J62S18CR0');
+</script>
+
 </head>
 <body>
     <div class="loading" id="loading">
