--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         </div>
                         <div class="recipe-info">
                             <h4>Pannkakor (Swedish Pancakes)</h4>
-                            <p>Cost: ~8 kr per serving - Can be made Halal!</p>
+                            <p>Cost: ~8 kr per serving </p>
                             <a href="recipe-pannkakor.html" class="recipe-link">View Recipe</a>
                         </div>
                     </div>
