--- a/recipe-pannkakor.html
+++ b/recipe-pannkakor.html
@@ -30,7 +30,7 @@
         <section class="recipe-detail">
             <div class="container">
                 <div class="recipe-header">
-                    <img src="pannkakor-detail.jpg" alt="Pannkakor" class="recipe-image">
+                    <img src="pannkakor.jpg" alt="Pannkakor" class="recipe-image">
                     
                     <div class="recipe-meta">
                         <h1>Pannkakor (Swedish Pancakes)</h1>
