--- a/recipes.html
+++ b/recipes.html
@@ -71,7 +71,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/kottbullar.jpg" alt="Swedish Köttbullar">
+                        <img src="kottbullar.jpg" alt="Swedish Köttbullar">
                         <div class="recipe-info">
                             <h3>Budget Köttbullar</h3>
                             <p class="cost">~22 kr per serving</p>
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="recipe-card">
-                        <img src="images/pytt-panna.jpg" alt="Pytt i Panna">
+                        <img src="pytt-panna.jpg" alt="Pytt i Panna">
                         <div class="recipe-info">
                             <h3>Pytt i Panna</h3>
                             <p class="cost">~18 kr per serving</p>
